--- a/xss/xss-reflected/templates/tst.html
+++ b/xss/xss-reflected/templates/tst.html
@@ -5,6 +5,7 @@
    <body><link rel='stylesheet' property='stylesheet' id='s' type='text/css' href="{{ url_for('static',filename='styles/css/ss.css') }}" media='all' />
            <h1>XSS Reflected</h1>
 
+		<span style="text-align: right; float:right;"> User : {{user}}</span><br/>
 
 	<b>Write a note and share it </b><br/><br/>        <form action="" method="GET" >
 	        <div>
